# CryptoLake

./: .env.example  .gitignore  Makefile  README.md  create_structure.sh  docker-compose.yml  pyproject.toml  start_cryptolake.bat
.github/workflows/: ci.yml
docker/airflow/: Dockerfile  requirements.txt
docker/spark/: Dockerfile  spark-defaults.conf
docs/: contracts.md
samples/: trade_event_v1.json
scripts/: doctor.py  health_check.py
src/api/: main.py
src/config/: logging.py  settings.py
src/contracts/: events.py  spark_schema.py
src/cryptolake.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ingestion/: base.py
src/ingestion/batch/: coingecko_extractor.py  fear_greed_extractor.py
src/ingestion/streaming/: binance_producer.py
src/orchestration/dags/: crypto_etl_dag.py
src/processing/: spark_session.py
src/processing/batch/: bronze_to_silver.py  bronze_to_silver_1m.py  check_silver_count.py  silver_quality.py
src/processing/bootstrap/: bootstrap_iceberg.py
src/processing/gold/: silver_to_gold_daily.py
src/processing/schemas/: bronze.py
src/processing/streaming/: stream_to_bronze.py
src/serving/: streamlit_app.py
src/transformation/dbt_cryptolake/: dbt_project.yml
src/transformation/dbt_cryptolake/models/: gold_daily_stats.sql  silver_ohlcv.sql
src/ui/: app.py
tests/: test_events.py  test_producer.py  test_settings.py  test_silver_quality.py  test_spark_schema.py
